# zfs3backup

./: .gitignore  requirements.txt  setup.cfg  setup.py  zfs3backup.conf
test/: test_pput.py  test_snap.py
zfs3backup/: common.py  config.py  get.py  pput.py  put.py  s3_snapshot.py  snap.py  ssh_sync.py  zfs3backup.py  zfs_snapshot.py
