[metadata]
name = zfs3backup
version = file: VERSION
description = Backup ZFS snapshots to S3
long_description = file: README.md
keywords = ZFS, S3, backup, restore
license = Apache License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Archiving :: Backup
    Topic :: Utilities

[options]
include_package_data = True
packages =
    zfs3backup
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    zfs3backup = zfs3backup.zfs3backup:main
    zfs3backup_get = zfs3backup.get:main
    zfs3backup_put = zfs3backup.put:main

